Finished Panda series dataframe prep for Wednesdays class

--- a/week1-pandas-series.ipynb
+++ b/week1-pandas-series.ipynb
@@ -47,13 +47,13 @@
      "output_type": "stream",
      "text": [
       "<class 'numpy.ndarray'>\n",
-      "[-0.49105361  1.58184133 -0.27201867 -0.64089814] \n",
+      "[0.72335368 0.97920494 0.13363149 0.8532242 ] \n",
       "\n",
       "<class 'pandas.core.series.Series'>\n",
-      "0   -0.491054\n",
-      "1    1.581841\n",
-      "2   -0.272019\n",
-      "3   -0.640898\n",
+      "0    0.723354\n",
+      "1    0.979205\n",
+      "2    0.133631\n",
+      "3    0.853224\n",
       "dtype: float64\n"
      ]
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a5aa5e18-cbe7-4dc1-a633-4cfd964d0b82",
    "metadata": {
     "tags": []
@@ -116,7 +116,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "308172b1-1853-4368-90f8-c3f93c63d43b",
    "metadata": {
     "tags": []
@@ -144,7 +144,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2fc84bb2-de18-48f5-bcf6-85c14ddb4fc5",
    "metadata": {
     "tags": []
@@ -171,7 +171,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "65ce437b-91b0-431c-819b-f51de3abde97",
    "metadata": {
     "tags": []
@@ -202,7 +202,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "023c8cf5-2e6a-4ecf-a8f6-6224330197b7",
    "metadata": {
     "tags": []
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "e425ba16-65f4-45b4-803c-8100ea6e21eb",
    "metadata": {
     "tags": []
@@ -333,7 +333,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "fa3345a2-43fa-46da-830b-c3eecf177f3c",
    "metadata": {
     "tags": []
@@ -358,7 +358,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "c3318bf9-f0f4-441d-9a86-565e0537738d",
    "metadata": {
     "tags": []
@@ -387,7 +387,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,6 +396,303 @@
     "# Figuring out which element has the NAs\n",
     "\n",
     "s.isna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc24c251-833a-44ef-8caf-3e0199284957",
+   "metadata": {},
+   "source": [
+    "# Check-in 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fc1ce7cc-f361-491e-a167-ee3f32e7b744",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Creating a series with four values, two of which being -999, and adding A-D index\n",
+    "s = pd.Series([1, 2, -999, -999], index = ['A', 'B', 'C', 'D'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eb2f0de4-64f6-4415-b281-f9a740d1dcb0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A      1\n",
+      "B      2\n",
+      "C   -999\n",
+      "D   -999\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9abf2401-aa21-4694-9e9c-536755f2695b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    1.0\n",
+       "B    2.0\n",
+       "C    NaN\n",
+       "D    NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using a mask function to turn -999s into NaNs\n",
+    "s.mask(s == -999)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa014986-235e-4a9c-86fa-2cde5e997862",
+   "metadata": {},
+   "source": [
+    "## Creating a pandas.DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a8ed58ce-488a-481a-85b6-ae6b9620af58",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col_name_1</th>\n",
+       "      <th>col_name_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col_name_1  col_name_2\n",
+       "0           0         3.1\n",
+       "1           1         3.2\n",
+       "2           2         3.3"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Initialize dictionary with columns' data \n",
+    "d = {'col_name_1' : pd.Series(np.arange(3)),\n",
+    "     'col_name_2' : pd.Series([3.1, 3.2, 3.3]),\n",
+    "     }\n",
+    "\n",
+    "# Create data frame from the dictionaries\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "0b077f97-9a47-49d0-9890-fa62109e8b3e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col_name_1</th>\n",
+       "      <th>col_name_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col_name_1  col_name_2\n",
+       "a           0         3.1\n",
+       "b           1         3.2\n",
+       "c           2         3.3"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Changing the index\n",
+    "df.index = ['a','b','c']\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8fda46d5-9f79-4ac6-9058-08bd9c7ca499",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['col_name_1', 'col_name_2'], dtype='object')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Looking at the column labels\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d75b339-ad16-404f-8661-c67a6eeec9e5",
+   "metadata": {},
+   "source": [
+    "# Check-in 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a2a9b72a-bad0-4223-a3af-a5d13f1fe106",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Renaming the columns using the .columns attribute\n",
+    "df.columns = ['C1', 'C2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "33cd7266-1b99-4038-9e39-8bba89e0e7da",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['C1', 'C2'], dtype='object')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Looking at the column labels\n",
+    "df.columns"
    ]
   }
  ],
