Finished Wednesday morning assignment with summary of lesson

--- a/week1-pandas-series.ipynb
+++ b/week1-pandas-series.ipynb
@@ -694,6 +694,16 @@
     "# Looking at the column labels\n",
     "df.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f4e1a99-adc9-4cd2-ade1-2754ec45d745",
+   "metadata": {},
+   "source": [
+    "# Summary of Lesson\n",
+    "\n",
+    "The index is the main difference between  Panda series and a Numpy arrays. In a panda series the index is part of the data structure. During this lesson I learned how to create a Panda.series from a numpy array, list, dictionary and single value. I also learned how to find NAs and NaNs and replace them. I also learned about the importance of data frames. I learned how to replace -999 with NaNs, and how to rename columns with the columns attribute."
+   ]
   }
  ],
  "metadata": {
