--- a/week1-pandas-series.ipynb
+++ b/week1-pandas-series.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "44dc181e-27f0-487e-9fa9-db588b576399",
    "metadata": {
     "tags": []
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "fc1ce7cc-f361-491e-a167-ee3f32e7b744",
    "metadata": {
     "tags": []
@@ -445,30 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "9abf2401-aa21-4694-9e9c-536755f2695b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A    1.0\n",
-       "B    2.0\n",
-       "C    NaN\n",
-       "D    NaN\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using a mask function to turn -999s into NaNs\n",
-    "s.mask(s == -999)"
+    "# and reassign the s so that it changes the actual data frame\n",
+    "s = s.mask(s == -999)"
    ]
   },
   {
